--- a/src/chat/view/View.scss
+++ b/src/chat/view/View.scss
@@ -2,3 +2,93 @@
   width: 100%;
   background-color: #29242A;
 }
+
+.chat {
+  display: flex;
+  height: 100%;
+
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+  }
+
+  &__header {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 20px 0 10px 0;
+    border-bottom: 1px solid rgba(47,42,48,.85)!important;
+    flex: 0 0 auto;
+
+    &__avatar {
+      margin-right: 20px;
+      &-img {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+      }
+    }
+
+    &__info {
+      display: flex;
+      width: 100%;
+      flex-direction: column;
+      justify-content: center;
+
+      h6, p {
+        color: #ffffff;
+        font-size: 15px;
+        white-space: nowrap;
+      }
+
+      h6 {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        padding-right: 10px;
+      }
+    }
+  }
+
+  &__messages {
+    flex: 1 0 auto;
+  }
+
+  &__footer {
+    width: 100%;
+    flex: 0 0 auto;
+    padding: 10px 0 20px 0;
+    border-top: 1px solid rgba(47,42,48,.85)!important;
+
+    &__form-group {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      button {
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+        background-color: #0176ff;
+        border-color: #0176ff;
+      }
+
+      textarea {
+        overflow: hidden;
+        overflow-wrap: break-word;
+        resize: none;
+        background: transparent;
+        color: #a7a7a7;
+        font-size: 15px;
+        width: 100%;
+        padding: 11px 17px;
+        height: 46px;
+        line-height: 1.6;
+      }
+    }
+  }
+}
