--- a/src/chat/page/chats/ChatCard/ChatCard.scss
+++ b/src/chat/page/chats/ChatCard/ChatCard.scss
@@ -4,6 +4,7 @@
   background-color: #29242a;
   border: 1px solid rgba(47,42,48,.85);
   border-radius: .375rem;
+  cursor: pointer;
 
   &__body {
     width: 100%;
