--- a/src/chat/view/message/Message.scss
+++ b/src/chat/view/message/Message.scss
@@ -18,10 +18,12 @@
     display: flex;
     flex-direction: column;
     margin-top: 18px;
+    width: 100%;
   }
 
   &__card {
     max-width: 45%;
+    min-width: 15%;
     border-radius: .625rem .625rem .625rem 2px;
     display: inline-block;
     padding: 18px;
