--- a/src/chat/view/MessageFrom/MessageFrom.scss
+++ b/src/chat/view/MessageFrom/MessageFrom.scss
@@ -10,6 +10,7 @@
     align-items: center;
 
     button {
+      cursor: pointer;
       height: 50px;
       width: 50px;
       border-radius: 50%;
