--- a/src/general/framework.scss
+++ b/src/general/framework.scss
@@ -1,7 +1,7 @@
 .container {
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
+    padding-right: 15px !important;
+    padding-left: 15px !important;
     margin-right: auto;
     margin-left: auto;
 }
