--- a/src/chat/page/chats/ChatCard/ChatCard.scss
+++ b/src/chat/page/chats/ChatCard/ChatCard.scss
@@ -5,6 +5,7 @@
   border: 1px solid rgba(47,42,48,.85);
   border-radius: .375rem;
   cursor: pointer;
+  margin-bottom: 20px;
 
   &__body {
     width: 100%;
