--- a/src/chat/page/chats/ChatCard/ChatCard.scss
+++ b/src/chat/page/chats/ChatCard/ChatCard.scss
@@ -61,3 +61,25 @@
     white-space: nowrap;
   }
 }
+
+.card-badge {
+  font-size: 15px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 50%;
+  border: 5px solid #2f2a30;
+  color: #fff;
+  background-color: #0176ff;
+  height: 30px;
+  width: 30px;
+  min-width: 20px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  transform: translate(25%,-25%);
+
+  &-show {
+    display: flex;
+  }
+}
