--- a/src/chat/view/message/Message.scss
+++ b/src/chat/view/message/Message.scss
@@ -1,8 +1,30 @@
 .message {
   display: flex;
   align-items: flex-end;
-  margin-top: 18px;
+  margin-bottom: 18px;
   width: 100%;
+
+  &-badge {
+    font-size: 15px;
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 50%;
+    border: 5px solid #29242A;
+    color: #fff;
+    background-color: #0176ff;
+    height: 20px;
+    width: 20px;
+    min-width: 20px;
+    justify-content: center;
+    align-items: center;
+    transform: translate(25%,-25%);
+
+    &-right {
+      display: flex;
+    }
+  }
 
   &__avatar {
     margin-right: 16px;
@@ -27,6 +49,7 @@
     border-radius: .625rem .625rem .625rem 2px;
     display: inline-block;
     padding: 18px;
+    position: relative;
     background-color: #2f2a30;
   }
 
