--- a/src/general/normalize.scss
+++ b/src/general/normalize.scss
@@ -10,3 +10,10 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+button:active, button:focus {
+    outline: none;
+}
+button::-moz-focus-inner {
+    border: 0;
+}
