--- a/src/chat/page/Page.scss
+++ b/src/chat/page/Page.scss
@@ -21,8 +21,8 @@
   &__title {
     color: #ffffff;
     font-size: 26px;
-    font-family: "Gilroy";
     font-weight: 700;
+    line-height: 41px;
     margin-bottom: 30px;
   }
 }
