--- a/src/general/fonts.scss
+++ b/src/general/fonts.scss
@@ -7,3 +7,5 @@
   url('../assets/font/circle/circe.ttf') format('truetype'), /* Safari, Android, iOS */
   url('../assets/font/circle/circe.svg#circe') format('svg'); /* Chrome < 4, Legacy iOS */
 }
+
+@import "http://fonts.fontstorage.com/import/roboto.css";
