--- a/src/chat/view/message/Message.scss
+++ b/src/chat/view/message/Message.scss
@@ -62,20 +62,22 @@
   &__content {
     font-size: 15px;
     font-weight: 400;
-    line-height: 1.6;
+    line-height: 24px;
     color: #a7a7a7;
     text-align: left;
   }
 
   &__time {
-    margin-top: 8px;
-    font-size: 12px;
+    margin-top: 2px;
+    font-size: 13px;
     font-weight: 400;
+    line-height: 21px;
     color: #a7a7a7;
   }
 
   &--right {
     justify-content: flex-end;
+
     .message__avatar {
       order: 2;
       margin-right: 0;
@@ -93,6 +95,10 @@
     }
 
     .message__content {
+      color: #ffffff;
+    }
+
+    .message__time {
       color: #ffffff;
     }
 
