--- a/src/chat/page/profile/Profile.scss
+++ b/src/chat/page/profile/Profile.scss
@@ -35,6 +35,7 @@
         font-weight: 500;
         color: #ffffff;
         margin-bottom: 4px;
+        text-align: center;
       }
 
       &__about {
@@ -43,6 +44,7 @@
         line-height: 24px;
         font-weight: 400;
         margin-bottom: 5px;
+        text-align: center;
       }
     }
   }
