--- a/src/chat/view/View.scss
+++ b/src/chat/view/View.scss
@@ -73,3 +73,23 @@
     border-top: 1px solid rgba(47,42,48,.85)!important;
   }
 }
+
+.style-1::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  background-color: transparent;
+}
+
+.style-1::-webkit-scrollbar
+{
+  width: 12px;
+  background-color: transparent;
+}
+
+.style-1::-webkit-scrollbar-thumb
+{
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #555;
+}
